remove offer button on small screens, fix header issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -253,3 +253,9 @@ label {
 .fab {
   color: #888;
 }
+
+@media (max-width: 655px){
+  .offer-button {
+    display: none;
+}
+}
